* Fixed bug where non-config files would occassionally be processed with config directory recursion
* Improvements to init script when stopping Nagios
* Minor changes to improve host and service freshness checking
* Fixed bug with event handlers and logging during soft host recoveries
* Added check for duplicate object names that could adversely affect template resolution
* A few other misc minor fixes



2.0b4 - 08/02/2005
------------------
* Memory leak fixes
* Fixed log message error at start of flapping
* Fixed segfault with invalid servicegroups in service definitions
* Non-existent problems can no longer be acknowledged
* Privileges will now only attempted be dropped if started as root user
* Embedded Perl fixes (to reduce memory leaks)
* Sample CGI config file fixes
* Added $HOSTCHECKTYPE$ and $SERVICECHECKTYPE$ macros
* Fixed bugs in $LASTHOSTCHECK$ macro (and corresponding on-demand macro)
* Fixed bugs in status data routines
* Fixed bug with NULL hostgroup and servicegroup membership
* Fixed bug with config directory recursion being broken
* Fixed bug with processing directives in non-registered object definitions
* Minor change to event broker API to prevent segfaults from unloaded modules
* Updated sample helloworld NEB module to show how to register callback routines



2.0b3 - 04/03/2005
------------------
* Sample config file fixes
* Fixed segfaults in CGIs where plugin output was NULL
* Minor fixes to INSTALL documentation
* Fixed segfault with mispaired servicegroup memberships
* Added $PROCESSSTARTTIME$ macro
* If not specified, host address and alias now default to host name
* Extended ASCII characters no longer auto-stripped from object names and macros
* Added external commands to adjust host and service notification numbers
* Init script changes
* Fixed bug where passive checks with empty plugin output were being dropped
* Fixed bug in state retention routines
* Configure script changes to (hopefully) support event broker under AIX 5